Added canvas item management as item.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<script src="js/init.js" type="module" async></script>
 </head>
 <body>
-	
+	<!-- <img src="UFBxY.png" name="org_img"> -->
 </body>
 </html>
